--- a/app_perf.qmd
+++ b/app_perf.qmd
@@ -1,7 +1,7 @@
 ---
-title: "Reproduceable Workflows"
-author: "RStudio/Posit Solutions Engineering (Lisa Anders)"
-institute: "RStudio, PBC"
+title: "Improving app performance with profvis"
+author: "Posit Solutions Engineering (Lisa Anders)"
+institute: "Posit, PBC"
 format:
   revealjs:
     multiplex: true
@@ -13,323 +13,528 @@ format:
 editor: visual
 ---
 
-# Outline {.smaller}
+### Why you should be using profvis {.smaller}
 
-- The data science workflow
-- New tools and tricks: Development, Sharing, and Production
-- Environment Management Strategies: Using renv and public package manager
-- Case Study
-
-::: {.notes}
-Press the S key (or use the Navigation Menu) to show the presentation speaker view (multiplex). 
-:::
-
-<!-- ## What is R? {.smaller} -->
-
-<!-- ![](https://www.r-project.org/Rlogo.png){width="250"} -->
-
-<!-- R is a **free and open-source** software environment for **statistical computing and graphics**. It compiles and runs on a wide variety of UNIX platforms, Windows and MacOS.  -->
-
-## Data Science Workflow
-
-<center>![](https://github.com/allisonhorst/stats-illustrations/raw/main/rstats-artwork/data_cowboy.png){width="70%"}
-
-**Develop** -> **Share** -> **Productionize**
-
-::: {.citation style="font-size: 16px"}
-
-"Illustration from Hadley Wickham's talk "The Joy of Functional Programming (for Data Science)." by [Allison Horst](https://github.com/allisonhorst/stats-illustrations)
-:::
-</center>
-
-::: {.notes}
-Development: 
--   Writing effective code
--   Connecting to data sources and systems
-
-Sharing: 
--   Sharing outputs and securing access
--   Delivering actionable insights
-
-Production: 
--   Code reproduceability
--   Managing packages and reproducing environments
--   Collaborating with team members
--   Implementing operational workflows and scaling
-
-Story segue. Manufacturing monitors project. Transferring code, hosting the output, challenges with numbers being different from other reports. 
-:::
-
-## New tools and tricks: Development {.smaller}
-
-::: {layout="[2, 20]"}
-![](https://www.tidymodels.org/images/tidymodels.png){width="70"}
-
-**tidymodels**
-  -   The tidymodels framework is a collection of packages for modeling and machine learning using tidyverse principles.
-:::
-
-::: {layout="[2, 20]"}
-![](https://rstudio.github.io/vetiver-r/logo.png){width="70"}
-
-**vetiver**
-  -   Vetiver provides fluent tooling to version, deploy, and monitor a trained model. 
-:::
-
-::: {layout="[2, 20]"}
-![](https://pins.rstudio.com/logo.png){width="70"}
-
-**pins**
-  -   The pins package publishes data, models, and other R objects, making it easy to share them across projects and with your colleagues. 
-:::
-
-::: {layout="[2, 20]"}
-![](https://d33wubrfki0l68.cloudfront.net/9f64516ebe93a8e5c91ea7409cbf422f8fec00e9/d75bd/logo.svg){width="70"}
-
-**plumber APIs**
-  -   Plumber allows you to create a web API by merely decorating your existing R source code with roxygen2-like comments.
-:::
+- You want to know what to prioritize to improve your application
+- Often what's holding your application back isn't intuitive
 
 <center>
+
+![](https://github.com/allisonhorst/stats-illustrations/raw/main/rstats-artwork/data_cowboy.png){width="50%"}
+
 ::: {.citation style="font-size: 16px"}
-tidymodels <https://www.tidymodels.org/>, vetiver <https://vetiver.rstudio.com/>, pins <https://pins.rstudio.com/>, plumber <https://www.rplumber.io/>
+"Illustration from Hadley Wickham's talk"The Joy of Functional Programming (for Data Science)." by [Allison Horst](https://github.com/allisonhorst/stats-illustrations)
 :::
+
 </center>
 
-::: {.notes}
-Development: 
+::: notes
 
--   Writing effective code
--   Connecting to data sources and systems
+-   Investigate server performance issues
+-   Profiling (and load testing)
+-   Runtime settings 
+-   Improve data handling (cacheing, storage)
+-   Consider async
+
 :::
 
-## New tools and tricks: Sharing {.smaller}
+## Profiling {auto-animate="true"}
+
+<font size="6"> 
+
+Profile apps to understand where it is spending the bulk of its time. Oftentimes the result is surprising and may point at the issue being a specific function or command rather than needing an overhaul of the app itself or changing how it is running on the server. 
 
 ::: {layout="[2, 20]"}
-![](https://quarto.org/quarto.png){width="60"}
+![](https://support.posit.co/hc/en-us/article_attachments/206191538/Screen_Shot_2016-04-04_at_2.09.15_PM.png){width="70"}
 
-**quarto**
-  -   A new open-source scientific and technical publishing system that works with R, Python, Julia, Javascript, and many other languages. 
-:::
-
-::: {layout="[2, 20]"}
-![](https://github.com/rstudio/shiny/raw/main/man/figures/logo.png){width="60"}
-
-**shinyuieditor**
-  -   A visual tool for building the UI portion of a Shiny application that generates clean and human-readable code.
-:::
-
-::: {layout="[2, 20]"}
-![](https://pkgs.rstudio.com/flexdashboard/reference/figures/logo.png){width="60"}
-
-**flexdashboard**
-  -   Flexible and easy to specify row and column-based layouts. Components are intelligently re-sized to fill the browser and adapted for display on mobile devices.
-:::
-
-::: {layout="[2, 20]"}
-![](https://swag.rstudio.com/uploads/1/3/1/3/131335021/s815253891256106552_p6_i2_w660.png){width="60"}
-
-**rstudio/posit connect**
-  -   Hosting for analytics, dashboards, API's, pinned datasets while working in an enterprise environment. 
-:::
-
-<center>
-::: {.citation style="font-size: 16px"}
-quarto <https://quarto.org/>, shinyuieditor <https://rstudio.github.io/shinyuieditor/>, flexdashboard <https://pkgs.rstudio.com/flexdashboard/>, Connect <https://www.rstudio.com/products/connect/>
-:::
-</center>
-
-
-
-::: {.notes}
-Sharing: 
-
--   Sharing outputs and securing access
--   Delivering actionable insights
+**profvis** - Profvis is a tool for helping you to understand how R spends its time. 
 :::
 
 
+``` r
+library(profvis)
 
+# general code example
+profvis({
+  data(diamonds, package = "ggplot2")
+  
+  plot(price ~ carat, data = diamonds)
+  m <- lm(price ~ carat, data = diamonds)
+  abline(m, col = "red")
+})
 
-
-
-## New tools and tricks: Productionize {.smaller}
-
-::: {layout="[2, 20]"}
-![](https://git-scm.com/images/logo@2x.png){width="70"}
-
-**Version control**
-  -   GitHub, Inc. is an Internet hosting service for software development and version control using Git. Other options include Bitbucket, Gitlab, and Azure DevOps. 
-:::
-
-::: {layout="[2, 20]"}
-![](https://rstudio.github.io/renv/logo.svg){width="70"}
-
-**renv**
-  -   renv helps manage library paths (and other project-specific state) to help isolate your project’s dependencies. 
-:::
-
-::: {layout="[2, 20]"}
-![](https://swag.rstudio.com/uploads/1/3/1/3/131335021/s815253891256106552_p6_i2_w660.png){width="70"}
-
-**rstudio/posit package manager**
-  -   In addition to providing standard mirrors of CRAN, Bioconductor, and PyPI, you can track changes over time or freeze packages to specific versions, to help ensure reproducibility and ease collaboration.
-:::
-
-<center>
-::: {.citation style="font-size: 16px"}
-git <https://git-scm.com/>, renv <https://rstudio.github.io/renv>, Package Manager <https://rstudio.com/products/package-manager/> and Public Package Manager <https://packagemanager.rstudio.com/>
-:::
-</center>
-
-::: {.notes}
-Production: 
-
--   Code reproduceability
--   Managing packages and reproducing environments
--   Collaborating with team members
--   Implementing operational workflows and scaling
-:::
-
-
-## Environment Management Strategies {.smaller}
-
-Great data science work should be **reproducible** and **collaborative**. 
-
-![](https://solutions.rstudio.com/environments/reproduce/reproducibility-strategies-and-danger-zones.png)
-
-
-<center>
-::: {.citation style="font-size: 16px"}
-Environments Strategy Maps <https://solutions.rstudio.com/environments/reproduce/>
-:::
-</center>
-
-::: {.notes}
-Being able to repeat experiments is the foundation of all science. Reproducing work is also critical for business applications: scheduled reporting, team collaboration, project validation.
-
-Environment Management Strategies: 
-- Snapshot and Restore
-  - The snapshot and restore strategy fits when package access is open and users are responsible for reproducibility. 
-- Shared Baseline
-  - The shared baseline strategy fits when administrators or R champions are responsible for creating an environment where less experienced users can easily share and re-run work. 
-- Validated
-  - The validated strategy is similar to the shared baseline strategy. The main difference is the validated strategy targets teams wishing to restrict access to a particular set of packages and teams wishing to approve or audit changes to the package environment. 
-:::
-
-## Example: Using renv, git, and Public Package Manager {.smaller}
-
-**Step 1: Use pre-compiled packages**
-
-- Go to [Public Package Manager](https://packagemanager.rstudio.com/client/#/)
-
-- Click on **Get Started** -> **Setup** -> **Distribution** and select your OS -> Select **Latest** or **Freeze** and follow the instructions below the calendar. 
-
-- For example: 
-
-```{.r}
-options(repos = c(REPO_NAME = "https://packagemanager.rstudio.com/all/latest"))
+# shiny app example
+profvis({runApp()})
 ```
 
-::: {.notes}
-Congratulations! You are now using hosted binary packages, no more struggling against c headers!  to a particular set of packages and teams wishing to approve or audit changes to the package environment. 
-
-https://support.rstudio.com/hc/en-us/articles/360046703913-FAQ-for-RStudio-Public-Package-Manager
-
-Package Manager supports users for accessing binaries of their packages. UI for searching through packages. Get information about it, crucially any system pre-requisites. If you need to grab an old version Package Manager hosts the old versions. Useful working with renv because if you need to restore a project that is older then likely it will need that older version. RStudio has a sync server where we take changes from CRAN and build the binaries. When you go to install a package we have binaries created. Fast, doesn't need to be compiled from source. Useful for large packages like arrow (anything with system dependencies) to install quickly since it won't need to build and prevent build failures.
-
-We evaluate CRAN, Bioconductor, and PyPI each business day (Monday through Friday) and publish new snapshots when updates are available. Then, RStudio Public Package Manager syncs these snapshots daily. For example, suppose a CRAN package gets updated on Saturday. We will publish a new snapshot to the RStudio Package Service sometime on Monday, usually Monday afternoon. Then, the CRAN sync will pick up the change on Tuesday at 12:00 am. Occasionally, if there are very important updates, we generate an extra snapshot to make the updates available sooner. The timing of each snapshot varies based on the number of changes and the number of dependencies involved.
-
+::: footer
+Learn more: [profvis](https://rstudio.github.io/profvis/index.html)
 :::
 
-## Example: Using renv, git, and Public Package Manager {.smaller}
+</font>
 
-**Step 2: Use environment tracking**
+## Profiling
 
-```{.r}
-options(repos = c(REPO_NAME = "https://packagemanager.rstudio.com/all/latest")) # We've already done this
-
-## Set up a new version controlled R project and install renv
-install.packages("renv")
-library(renv)
-
-## Initialize your project with renv
-renv::init()
-
-## After creating an R script and loading a couple libraries take a snapshot of the project 
-renv::snapshot():
-
-## Repeat a couple times, changing the packages being called so that we see something interesting when we run:
-renv::history()
-
-## Optionally, revert back to an earlier snapshot:
-renv::revert()
-```
+<font size="6"> 
 
 <center>
+
+![](https://support.posit.co/hc/en-us/article_attachments/206191538/Screen_Shot_2016-04-04_at_2.09.15_PM.png){width="70%"}
+
 ::: {.citation style="font-size: 16px"}
-renv <https://rstudio.github.io/renv>, Package Manager <https://rstudio.com/products/package-manager/> and Public Package Manager <https://packagemanager.rstudio.com/>
+For more information refer to [the support article](https://rstudio.github.io/profvis/index.html)
 :::
+
 </center>
 
-## Example: Using renv, git, and Public Package Manager {.smaller}
+</font> 
 
-**Step 3: Easy collaboration**
+::: notes
+On top is the code, and on the bottom is a flame graph. In the flame graph, the horizontal direction represents time in milliseconds, and the vertical direction represents the call stack. Looking at the bottom-most items on the stack, most of the time, about 2 seconds, is spent in plot, and then a much smaller amount of time is spent in lm, and almost no time at all is spent in abline – it doesn’t even show up on the flame graph.
 
-```{.r}
-options(repos = c(REPO_NAME = "https://packagemanager.rstudio.com/all/latest")) # We've already done this
+Each block in the flame graph represents a call to a function, or possibly multiple calls to the same function. The width of the block is proportional to the amount of time spent in that function. When a function calls another function, another block is added on top of it in the flame graph.
 
-## Send a colleague the link to your project on git, they'll restore your environment with:
-renv::restore()
+The profiling data has some limitations: some internal R functions don’t show up in the flame graph, and it offers no insight into code that’s implemented in languages other than R (e.g. C, C++, or Fortran).
+:::
+
+
+## Load testing {auto-animate="true"}
+
+<font size="6"> 
+
+Using [load testing](https://docs.rstudio.com/connect/user/shiny/#load-testing) with profiling grants a very granular view of where the performance issues are happening. Oftenlower usage apps may appear to have great performance, only to struggle as more users access that piece of content due to multiple users sharing the same R or Python process. 
+
+::: {layout="[2, 20]"}
+![](https://rstudio.github.io/shinyloadtest/reference/figures/slt_report_screenshot.png){width="70"}
+
+
+
+**shinyloadtest** - Load testing helps developers and administrators estimate how many users their application can support.
+:::
+
+
+::: footer
+Learn more: [shinyloadtest](https://rstudio.github.io/shinyloadtest/articles/load-testing-authenticated-apps.html)
+:::
+
+</font>
+
+::: notes
+The steps: 
+
+- Record a typical user session for the app.
+- Replay the session in parallel, simulating many simultaneous users accessing the app.
+- Analyze the results of the load test and determine if the app performed well enough.
+:::
+
+## Load testing {auto-animate="true"}
+
+<font size="5"> 
+
+::: {layout="[2, 20]"}
+![](https://rstudio.github.io/shinyloadtest/reference/figures/slt_report_screenshot.png){width="70"}
+
+**shinyloadtest** - Load testing helps developers and administrators estimate how many users their application can support.
+:::
+
+The steps: 
+
+- Record a typical user session for the app.
+
+``` r
+shinyloadtest::record_session('https://shinyapp.example.com/')
 ```
 
-<center>
-::: {.citation style="font-size: 16px"}
-renv <https://rstudio.github.io/renv>, Package Manager <https://rstudio.com/products/package-manager/> and Public Package Manager <https://packagemanager.rstudio.com/>
+- Replay the session in parallel, simulating many simultaneous users accessing the app.
+
+``` r
+shinycannon recording.log https://shinyapp.example.com/ --workers 5 --loaded-duration-minutes 2 --output-dir run1
+```
+
+- Analyze the results of the load test and determine if the app performed well enough.
+
+``` r
+df <- shinyloadtest::load_runs("run1")
+shinyloadtest::shinyloadtest_report(df, "run1.html")
+```
+
+::: footer
+Learn more: [shinyloadtest](https://rstudio.github.io/shinyloadtest/articles/load-testing-authenticated-apps.html)
 :::
+
+</font>
+
+
+## Load testing {auto-animate="true"}
+
+<font size="6"> 
+
+::: {layout="[2, 20]"}
+![](https://rstudio.github.io/shinyloadtest/reference/figures/slt_report_screenshot.png){width="70"}
+
+**shinyloadtest** - Load testing helps developers and administrators estimate how many users their application can support.
+:::
+
+<center>
+
+![](https://rstudio.github.io/shinyloadtest/reference/figures/slt_report_screenshot.png){width="70%"}
+
+::: {.citation style="font-size: 16px"}
+For more information refer to [shinyloadtest](https://rstudio.github.io/shinyloadtest/articles/load-testing-authenticated-apps.html)
+:::
+
 </center>
 
-::: {.notes}
-Congratulations! You now have a project that has all dependencies explicitly tracked. You can come back to this project weeks, years later and will be able to create exactly the environment it needs in order to successfully run with one command, renv::restore(). 
-
-:::
-
-## Case Study {.smaller}
-
-![](https://github.com/sol-eng/bike_predict/raw/main/img/arrows.drawio.png){width="70%"}
+</font>
 
 
-::: {.citation style="font-size: 16px"}
+## What about Python? 
 
-Bike Predict <https://solutions.rstudio.com/example/bike_predict/>
-:::
-
-::: {.notes}
-https://solutions.rstudio.com/example/bike_predict/
-
--   Case Study
-    -   Bike predict
-    -   Workbench, Connect, Package Manager
-    -   Git version control and CI/CD
-    -   renv package management
-    -   Vetiver
-    -   Modularizing the code: API, Pins, Apps
-:::
+- [Python profiling tool](https://jiffyclub.github.io/snakeviz/)
+- [Python load testing tool](https://locust.io/)
 
 
-## Where to go from here {.smaller}
+<!-- # Profiling -->
 
-   **What They Forgot to Teach You About R** : <https://rstats.wtf/>
-  
-   **Happy Git with R** : <https://happygitwithr.com/>
-  
-   **Vetiver**
-   
-  - Vetiver blog announcement post, <https://www.rstudio.com/blog/announce-vetiver/>
-  - Vetiver tidyverse announcement post, <https://www.tidyverse.org/blog/2022/06/announce-vetiver/>
-  
-   **Using Public Package Manager** : <https://support.rstudio.com/hc/en-us/articles/360046703913-FAQ-for-RStudio-Public-Package-Manager>
-  
-   **Interested in our Enterprise Products? Click [here](https://www.rstudio.com/products/team/)**
-  
+<!-- ```{r} -->
+<!-- library(profvis) -->
 
+<!-- p <- profvis({ -->
+<!--   data(diamonds, package = "ggplot2") -->
+
+<!--   plot(price ~ carat, data = diamonds) -->
+<!--   m <- lm(price ~ carat, data = diamonds) -->
+<!--   abline(m, col = "red") -->
+<!-- }) -->
+
+<!-- print(p) -->
+<!-- p -->
+<!-- ``` -->
+
+
+<!-- # Old Faithful Case Study {.smaller} -->
+
+<!-- We've gotten reports of intermittent performance issues for this app:  -->
+
+<!-- ```{r} -->
+<!-- # library(shiny) -->
+<!-- #  -->
+<!-- # # Define UI for application that draws a histogram -->
+<!-- # ui <- fluidPage( -->
+<!-- # #  -->
+<!-- #     # Application title -->
+<!-- #     titlePanel("Old Faithful Geyser Data"), -->
+<!-- #  -->
+<!-- #     # Sidebar with a slider input for number of bins  -->
+<!-- #     sidebarLayout( -->
+<!-- #         sidebarPanel( -->
+<!-- #             sliderInput("bins", -->
+<!-- #                         "Number of bins:", -->
+<!-- #                         min = 1, -->
+<!-- #                         max = 50, -->
+<!-- #                         value = 30) -->
+<!-- #         ), -->
+<!-- #  -->
+<!-- #         # Show a plot of the generated distribution -->
+<!-- #         mainPanel( -->
+<!-- #            plotOutput("distPlot") -->
+<!-- #         ) -->
+<!-- #     ) -->
+<!-- # ) -->
+<!-- #  -->
+<!-- # # Define server logic required to draw a histogram -->
+<!-- # server <- function(input, output) { -->
+<!-- #  -->
+<!-- #     output$distPlot <- renderPlot({ -->
+<!-- #         # generate bins based on input$bins from ui.R -->
+<!-- #         x    <- faithful[, 2] -->
+<!-- #         bins <- seq(min(x), max(x), length.out = input$bins + 1) -->
+<!-- #  -->
+<!-- #         # draw the histogram with the specified number of bins -->
+<!-- #         hist(x, breaks = bins, col = 'darkgray', border = 'white') -->
+<!-- #     }) -->
+<!-- # } -->
+<!-- #  -->
+<!-- # # Run the application  -->
+<!-- # shinyApp(ui = ui, server = server) -->
+<!-- ``` -->
+
+## Where to go from here?  
+
+- [Shiny in Production by Kelly O'Briant](https://kellobri.github.io/shiny-prod-book/scaling.html)
+- [Cran whales](https://rstudio.github.io/promises/articles/casestudy.html)
+- [Cran whales talk](https://www.youtube.com/watch?v=Wy3TY0gOmJw)
+- [Cran whales article](https://cran.r-project.org/web/packages/promises/vignettes/casestudy.html)
+- [Profiling in RStudio](https://support.posit.co/hc/en-us/articles/218221837-Profiling-with-RStudio)
+
+
+# Optional/Backup {.smaller}
+
+# Data best practices {.smaller}
+
+Apply data best practices and see if that improves performance:  
+
+ - Pull data on a scheduler
+ - Reducing the data being loaded 
+ - Selecting a faster data storage system, for example by [pinning arrow files](https://pins.rstudio.com/articles/pins.html?q=arrow#reading-and-writing-data)
+ - Utilize [cacheing](https://docs.rstudio.com/connect/user/shiny/#caching)
+
+
+# Async {.smaller}
+
+As a last resort we can consider async. 
+
+In general, async is only useful when there are specific steps that take a long time to run, since that will free up the process to service other users. Usually async is saved as a last resort because it is usually the most challenging to implement. 
+
+ - [Improving scalability with async programming in R](https://shiny.rstudio.com/articles/async.html)
+ - [Improving scalability with async programming in Python](https://shiny.rstudio.com/articles/async.html)
+
+When using async, encouraging developers to include additional debug messages, for example with [log4r in R](https://github.com/johnmyleswhite/log4r), is particularly important. This will allow developers to trace back errors to the session and connection. 
+
+
+
+
+
+
+
+<!-- ## New tools and tricks: Development {.smaller} -->
+
+<!-- ::: {layout="[2, 20]"} -->
+<!-- ![](https://www.tidymodels.org/images/tidymodels.png){width="70"} -->
+
+<!-- **tidymodels** - The tidymodels framework is a collection of packages for modeling and machine learning using tidyverse principles. -->
+<!-- ::: -->
+
+<!-- ::: {layout="[2, 20]"} -->
+<!-- ![](https://rstudio.github.io/vetiver-r/logo.png){width="70"} -->
+
+<!-- **vetiver** - Vetiver provides fluent tooling to version, deploy, and monitor a trained model. -->
+<!-- ::: -->
+
+<!-- ::: {layout="[2, 20]"} -->
+<!-- ![](https://pins.rstudio.com/logo.png){width="70"} -->
+
+<!-- **pins** - The pins package publishes data, models, and other R objects, making it easy to share them across projects and with your colleagues. -->
+<!-- ::: -->
+
+<!-- ::: {layout="[2, 20]"} -->
+<!-- ![](https://d33wubrfki0l68.cloudfront.net/9f64516ebe93a8e5c91ea7409cbf422f8fec00e9/d75bd/logo.svg){width="70"} -->
+
+<!-- **plumber APIs** - Plumber allows you to create a web API by merely decorating your existing R source code with roxygen2-like comments. -->
+<!-- ::: -->
+
+<!-- <center> -->
+
+<!-- ::: {.citation style="font-size: 16px"} -->
+<!-- tidymodels <https://www.tidymodels.org/>, vetiver <https://vetiver.rstudio.com/>, pins <https://pins.rstudio.com/>, plumber <https://www.rplumber.io/> -->
+<!-- ::: -->
+
+<!-- </center> -->
+
+<!-- ::: notes -->
+<!-- Development: -->
+
+<!-- -   Writing effective code -->
+<!-- -   Connecting to data sources and systems -->
+<!-- ::: -->
+
+<!-- ## New tools and tricks: Sharing {.smaller} -->
+
+<!-- ::: {layout="[2, 20]"} -->
+<!-- ![](https://quarto.org/quarto.png){width="60"} -->
+
+<!-- **quarto** - A new open-source scientific and technical publishing system that works with R, Python, Julia, Javascript, and many other languages. -->
+<!-- ::: -->
+
+<!-- ::: {layout="[2, 20]"} -->
+<!-- ![](https://github.com/rstudio/shiny/raw/main/man/figures/logo.png){width="60"} -->
+
+<!-- **shinyuieditor** - A visual tool for building the UI portion of a Shiny application that generates clean and human-readable code. -->
+<!-- ::: -->
+
+<!-- ::: {layout="[2, 20]"} -->
+<!-- ![](https://pkgs.rstudio.com/flexdashboard/reference/figures/logo.png){width="60"} -->
+
+<!-- **flexdashboard** - Flexible and easy to specify row and column-based layouts. Components are intelligently re-sized to fill the browser and adapted for display on mobile devices. -->
+<!-- ::: -->
+
+<!-- ::: {layout="[2, 20]"} -->
+<!-- ![](https://swag.rstudio.com/uploads/1/3/1/3/131335021/s815253891256106552_p6_i2_w660.png){width="60"} -->
+
+<!-- **rstudio/posit connect** - Hosting for analytics, dashboards, API's, pinned datasets while working in an enterprise environment. -->
+<!-- ::: -->
+
+<!-- <center> -->
+
+<!-- ::: {.citation style="font-size: 16px"} -->
+<!-- quarto <https://quarto.org/>, shinyuieditor <https://rstudio.github.io/shinyuieditor/>, flexdashboard <https://pkgs.rstudio.com/flexdashboard/>, Connect <https://www.rstudio.com/products/connect/> -->
+<!-- ::: -->
+
+<!-- </center> -->
+
+<!-- ::: notes -->
+<!-- Sharing: -->
+
+<!-- -   Sharing outputs and securing access -->
+<!-- -   Delivering actionable insights -->
+<!-- ::: -->
+
+<!-- ## New tools and tricks: Productionize {.smaller} -->
+
+<!-- ::: {layout="[2, 20]"} -->
+<!-- ![](https://git-scm.com/images/logo@2x.png){width="70"} -->
+
+<!-- **Version control** - GitHub, Inc. is an Internet hosting service for software development and version control using Git. Other options include Bitbucket, Gitlab, and Azure DevOps. -->
+<!-- ::: -->
+
+<!-- ::: {layout="[2, 20]"} -->
+<!-- ![](https://rstudio.github.io/renv/logo.svg){width="70"} -->
+
+<!-- **renv** - renv helps manage library paths (and other project-specific state) to help isolate your project's dependencies. -->
+<!-- ::: -->
+
+<!-- ::: {layout="[2, 20]"} -->
+<!-- ![](https://swag.rstudio.com/uploads/1/3/1/3/131335021/s815253891256106552_p6_i2_w660.png){width="70"} -->
+
+<!-- **rstudio/posit package manager** - In addition to providing standard mirrors of CRAN, Bioconductor, and PyPI, you can track changes over time or freeze packages to specific versions, to help ensure reproducibility and ease collaboration. -->
+<!-- ::: -->
+
+<!-- <center> -->
+
+<!-- ::: {.citation style="font-size: 16px"} -->
+<!-- git <https://git-scm.com/>, renv <https://rstudio.github.io/renv>, Package Manager <https://rstudio.com/products/package-manager/> and Public Package Manager <https://packagemanager.rstudio.com/> -->
+<!-- ::: -->
+
+<!-- </center> -->
+
+<!-- ::: notes -->
+<!-- Production: -->
+
+<!-- -   Code reproduceability -->
+<!-- -   Managing packages and reproducing environments -->
+<!-- -   Collaborating with team members -->
+<!-- -   Implementing operational workflows and scaling -->
+<!-- ::: -->
+
+
+
+<!-- ## Where to go from here {.smaller} -->
+
+<!-- **What They Forgot to Teach You About R** : <https://rstats.wtf/> -->
+
+<!-- **Happy Git with R** : <https://happygitwithr.com/> -->
+
+<!-- **Vetiver** -->
+
+<!-- -   Vetiver blog announcement post, <https://www.rstudio.com/blog/announce-vetiver/> -->
+<!-- -   Vetiver tidyverse announcement post, <https://www.tidyverse.org/blog/2022/06/announce-vetiver/> -->
+
+<!-- **Using Public Package Manager** : <https://support.rstudio.com/hc/en-us/articles/360046703913-FAQ-for-RStudio-Public-Package-Manager> -->
+
+<!-- **Interested in our Enterprise Products? Click [here](https://www.rstudio.com/products/team/)** -->
+
+
+
+
+<!-- ## Pretty Code {auto-animate="true"} -->
+
+<!-- -   Over 20 syntax highlighting themes available -->
+<!-- -   Default theme optimized for accessibility -->
+
+<!-- ``` r -->
+<!-- # Define a server for the Shiny app -->
+<!-- function(input, output) { -->
+
+<!--   # Fill in the spot we created for a plot -->
+<!--   output$phonePlot <- renderPlot({ -->
+<!--     # Render a barplot -->
+<!--   }) -->
+<!-- } -->
+<!-- ``` -->
+
+<!-- ## Executable Code -->
+
+<!-- ```{r} -->
+<!-- #| echo: true -->
+<!-- #| fig-width: 10 -->
+<!-- #| fig-height: 4.5 -->
+<!-- library(ggplot2) -->
+<!-- ggplot(mtcars, aes(hp, mpg, color = am)) + -->
+<!--   geom_point() + -->
+<!--   geom_smooth(formula = y ~ x, method = "loess") -->
+<!-- ``` -->
+
+
+
+<!-- ::: footer -->
+<!-- Learn more: [Syntax Highlighting](https://quarto.org/docs/output-formats/html-code.html#highlighting) -->
+<!-- ::: -->
+
+<!-- ## Outline {.smaller} -->
+
+<!-- -   Fundamental limitations of R and Python  -->
+<!-- -   When to know it's a real server issue  -->
+<!-- -   Best practices for improving your apps performance  -->
+
+<!-- ::: notes -->
+<!-- Press the S key (or use the Navigation Menu) to show the presentation speaker view (multiplex). -->
+
+<!-- -   Fundamental limitations of R and Python  -->
+<!-- -   When to know it's a real server issue  -->
+<!-- -   Best practices for improving your apps performance  -->
+<!--   -   Profiling and load testing  -->
+<!--   -   Runtime settings  -->
+<!--   -   Data best practices  -->
+<!--   -   When to consider async -->
+<!-- ::: -->
+
+
+<!-- ## R and Python {.smaller} -->
+
+<!-- ![](https://rstudio.github.io/reticulate/img/reticulated_python.png){width="250"} -->
+
+<!-- R and Python are **free and open-source** software environments for **statistical computing and graphics** as well as other applications. They compile and run on a wide variety of UNIX platforms, Windows and MacOS. -->
+
+<!-- Fundamental limitation of R and Python : Single Threaded  -->
+
+<!-- - Multiple connections share a process  -->
+<!-- - Each process only handles one request at a time  -->
+<!-- - Analogy: Kitchen  -->
+
+<!-- ::: notes -->
+
+
+<!-- ::: -->
+
+<!-- ## When to know it's a real server issue  {.smaller} -->
+
+<!-- Ask the questions:  -->
+
+<!-- -   Are all applications impacted?  -->
+<!-- -   Has performance gotten worse over time?  -->
+
+<!-- Use the tools:  -->
+
+<!-- -   Admin dashboard  -->
+<!-- -   Logs  -->
+<!-- -   Scheduled content timetable  -->
+<!-- -   Any additional monitoring through Prometheus/Graphite/etc.  -->
+<!-- -   Reclaim space by [reducing the number of bundles stored on the server](https://docs.rstudio.com/connect/admin/content-management/#bundle-management) -->
+
+<!-- ::: notes -->
+
+
+<!-- ::: -->
+
+
+<!-- <font size="1"> This is my text number1</font>  -->
+
+<!--  <font size="2"> This is my text number 2 </font> -->
+
+<!--  <font size="3"> This is my text number 3</font>  -->
+
+<!--  <font size="4"> This is my text number 4</font>  -->
+
+<!--  <font size="5"> This is my text number 5</font>  -->
+
+<!--  <font size="6"> This is my text number 6</font> -->
