--- a/app_perf.qmd
+++ b/app_perf.qmd
@@ -193,72 +193,6 @@ For more information refer to [shinyloadtest](https://rstudio.github.io/shinyloa
 - Python profiling tool: <https://jiffyclub.github.io/snakeviz/>
 - Python load testing tool: <https://locust.io/>
 
-
-<!-- # Profiling -->
-
-<!-- ```{r} -->
-<!-- library(profvis) -->
-
-<!-- p <- profvis({ -->
-<!--   data(diamonds, package = "ggplot2") -->
-
-<!--   plot(price ~ carat, data = diamonds) -->
-<!--   m <- lm(price ~ carat, data = diamonds) -->
-<!--   abline(m, col = "red") -->
-<!-- }) -->
-
-<!-- print(p) -->
-<!-- p -->
-<!-- ``` -->
-
-
-<!-- # Old Faithful Case Study {.smaller} -->
-
-<!-- We've gotten reports of intermittent performance issues for this app:  -->
-
-<!-- ```{r} -->
-<!-- # library(shiny) -->
-<!-- #  -->
-<!-- # # Define UI for application that draws a histogram -->
-<!-- # ui <- fluidPage( -->
-<!-- # #  -->
-<!-- #     # Application title -->
-<!-- #     titlePanel("Old Faithful Geyser Data"), -->
-<!-- #  -->
-<!-- #     # Sidebar with a slider input for number of bins  -->
-<!-- #     sidebarLayout( -->
-<!-- #         sidebarPanel( -->
-<!-- #             sliderInput("bins", -->
-<!-- #                         "Number of bins:", -->
-<!-- #                         min = 1, -->
-<!-- #                         max = 50, -->
-<!-- #                         value = 30) -->
-<!-- #         ), -->
-<!-- #  -->
-<!-- #         # Show a plot of the generated distribution -->
-<!-- #         mainPanel( -->
-<!-- #            plotOutput("distPlot") -->
-<!-- #         ) -->
-<!-- #     ) -->
-<!-- # ) -->
-<!-- #  -->
-<!-- # # Define server logic required to draw a histogram -->
-<!-- # server <- function(input, output) { -->
-<!-- #  -->
-<!-- #     output$distPlot <- renderPlot({ -->
-<!-- #         # generate bins based on input$bins from ui.R -->
-<!-- #         x    <- faithful[, 2] -->
-<!-- #         bins <- seq(min(x), max(x), length.out = input$bins + 1) -->
-<!-- #  -->
-<!-- #         # draw the histogram with the specified number of bins -->
-<!-- #         hist(x, breaks = bins, col = 'darkgray', border = 'white') -->
-<!-- #     }) -->
-<!-- # } -->
-<!-- #  -->
-<!-- # # Run the application  -->
-<!-- # shinyApp(ui = ui, server = server) -->
-<!-- ``` -->
-
 ## Where to go from here?  
 
 - [Shiny in Production by Kelly O'Briant](https://kellobri.github.io/shiny-prod-book/scaling.html)
@@ -293,248 +227,22 @@ When using async, encouraging developers to include additional debug messages, f
 
 
 
+## When to know it's a real server issue  {.smaller}
 
+Ask the questions:
 
+-   Are all applications impacted?
+-   Has performance gotten worse over time?
 
+Use the tools:
 
-<!-- ## New tools and tricks: Development {.smaller} -->
+-   Admin dashboard
+-   Logs
+-   Scheduled content timetable
+-   Any additional monitoring through Prometheus/Graphite/etc.
+-   Reclaim space by [reducing the number of bundles stored on the server](https://docs.rstudio.com/connect/admin/content-management/#bundle-management)
 
-<!-- ::: {layout="[2, 20]"} -->
-<!-- ![](https://www.tidymodels.org/images/tidymodels.png){width="70"} -->
+::: notes
 
-<!-- **tidymodels** - The tidymodels framework is a collection of packages for modeling and machine learning using tidyverse principles. -->
-<!-- ::: -->
+:::
 
-<!-- ::: {layout="[2, 20]"} -->
-<!-- ![](https://rstudio.github.io/vetiver-r/logo.png){width="70"} -->
-
-<!-- **vetiver** - Vetiver provides fluent tooling to version, deploy, and monitor a trained model. -->
-<!-- ::: -->
-
-<!-- ::: {layout="[2, 20]"} -->
-<!-- ![](https://pins.rstudio.com/logo.png){width="70"} -->
-
-<!-- **pins** - The pins package publishes data, models, and other R objects, making it easy to share them across projects and with your colleagues. -->
-<!-- ::: -->
-
-<!-- ::: {layout="[2, 20]"} -->
-<!-- ![](https://d33wubrfki0l68.cloudfront.net/9f64516ebe93a8e5c91ea7409cbf422f8fec00e9/d75bd/logo.svg){width="70"} -->
-
-<!-- **plumber APIs** - Plumber allows you to create a web API by merely decorating your existing R source code with roxygen2-like comments. -->
-<!-- ::: -->
-
-<!-- <center> -->
-
-<!-- ::: {.citation style="font-size: 16px"} -->
-<!-- tidymodels <https://www.tidymodels.org/>, vetiver <https://vetiver.rstudio.com/>, pins <https://pins.rstudio.com/>, plumber <https://www.rplumber.io/> -->
-<!-- ::: -->
-
-<!-- </center> -->
-
-<!-- ::: notes -->
-<!-- Development: -->
-
-<!-- -   Writing effective code -->
-<!-- -   Connecting to data sources and systems -->
-<!-- ::: -->
-
-<!-- ## New tools and tricks: Sharing {.smaller} -->
-
-<!-- ::: {layout="[2, 20]"} -->
-<!-- ![](https://quarto.org/quarto.png){width="60"} -->
-
-<!-- **quarto** - A new open-source scientific and technical publishing system that works with R, Python, Julia, Javascript, and many other languages. -->
-<!-- ::: -->
-
-<!-- ::: {layout="[2, 20]"} -->
-<!-- ![](https://github.com/rstudio/shiny/raw/main/man/figures/logo.png){width="60"} -->
-
-<!-- **shinyuieditor** - A visual tool for building the UI portion of a Shiny application that generates clean and human-readable code. -->
-<!-- ::: -->
-
-<!-- ::: {layout="[2, 20]"} -->
-<!-- ![](https://pkgs.rstudio.com/flexdashboard/reference/figures/logo.png){width="60"} -->
-
-<!-- **flexdashboard** - Flexible and easy to specify row and column-based layouts. Components are intelligently re-sized to fill the browser and adapted for display on mobile devices. -->
-<!-- ::: -->
-
-<!-- ::: {layout="[2, 20]"} -->
-<!-- ![](https://swag.rstudio.com/uploads/1/3/1/3/131335021/s815253891256106552_p6_i2_w660.png){width="60"} -->
-
-<!-- **rstudio/posit connect** - Hosting for analytics, dashboards, API's, pinned datasets while working in an enterprise environment. -->
-<!-- ::: -->
-
-<!-- <center> -->
-
-<!-- ::: {.citation style="font-size: 16px"} -->
-<!-- quarto <https://quarto.org/>, shinyuieditor <https://rstudio.github.io/shinyuieditor/>, flexdashboard <https://pkgs.rstudio.com/flexdashboard/>, Connect <https://www.rstudio.com/products/connect/> -->
-<!-- ::: -->
-
-<!-- </center> -->
-
-<!-- ::: notes -->
-<!-- Sharing: -->
-
-<!-- -   Sharing outputs and securing access -->
-<!-- -   Delivering actionable insights -->
-<!-- ::: -->
-
-<!-- ## New tools and tricks: Productionize {.smaller} -->
-
-<!-- ::: {layout="[2, 20]"} -->
-<!-- ![](https://git-scm.com/images/logo@2x.png){width="70"} -->
-
-<!-- **Version control** - GitHub, Inc. is an Internet hosting service for software development and version control using Git. Other options include Bitbucket, Gitlab, and Azure DevOps. -->
-<!-- ::: -->
-
-<!-- ::: {layout="[2, 20]"} -->
-<!-- ![](https://rstudio.github.io/renv/logo.svg){width="70"} -->
-
-<!-- **renv** - renv helps manage library paths (and other project-specific state) to help isolate your project's dependencies. -->
-<!-- ::: -->
-
-<!-- ::: {layout="[2, 20]"} -->
-<!-- ![](https://swag.rstudio.com/uploads/1/3/1/3/131335021/s815253891256106552_p6_i2_w660.png){width="70"} -->
-
-<!-- **rstudio/posit package manager** - In addition to providing standard mirrors of CRAN, Bioconductor, and PyPI, you can track changes over time or freeze packages to specific versions, to help ensure reproducibility and ease collaboration. -->
-<!-- ::: -->
-
-<!-- <center> -->
-
-<!-- ::: {.citation style="font-size: 16px"} -->
-<!-- git <https://git-scm.com/>, renv <https://rstudio.github.io/renv>, Package Manager <https://rstudio.com/products/package-manager/> and Public Package Manager <https://packagemanager.rstudio.com/> -->
-<!-- ::: -->
-
-<!-- </center> -->
-
-<!-- ::: notes -->
-<!-- Production: -->
-
-<!-- -   Code reproduceability -->
-<!-- -   Managing packages and reproducing environments -->
-<!-- -   Collaborating with team members -->
-<!-- -   Implementing operational workflows and scaling -->
-<!-- ::: -->
-
-
-
-<!-- ## Where to go from here {.smaller} -->
-
-<!-- **What They Forgot to Teach You About R** : <https://rstats.wtf/> -->
-
-<!-- **Happy Git with R** : <https://happygitwithr.com/> -->
-
-<!-- **Vetiver** -->
-
-<!-- -   Vetiver blog announcement post, <https://www.rstudio.com/blog/announce-vetiver/> -->
-<!-- -   Vetiver tidyverse announcement post, <https://www.tidyverse.org/blog/2022/06/announce-vetiver/> -->
-
-<!-- **Using Public Package Manager** : <https://support.rstudio.com/hc/en-us/articles/360046703913-FAQ-for-RStudio-Public-Package-Manager> -->
-
-<!-- **Interested in our Enterprise Products? Click [here](https://www.rstudio.com/products/team/)** -->
-
-
-
-
-<!-- ## Pretty Code {auto-animate="true"} -->
-
-<!-- -   Over 20 syntax highlighting themes available -->
-<!-- -   Default theme optimized for accessibility -->
-
-<!-- ``` r -->
-<!-- # Define a server for the Shiny app -->
-<!-- function(input, output) { -->
-
-<!--   # Fill in the spot we created for a plot -->
-<!--   output$phonePlot <- renderPlot({ -->
-<!--     # Render a barplot -->
-<!--   }) -->
-<!-- } -->
-<!-- ``` -->
-
-<!-- ## Executable Code -->
-
-<!-- ```{r} -->
-<!-- #| echo: true -->
-<!-- #| fig-width: 10 -->
-<!-- #| fig-height: 4.5 -->
-<!-- library(ggplot2) -->
-<!-- ggplot(mtcars, aes(hp, mpg, color = am)) + -->
-<!--   geom_point() + -->
-<!--   geom_smooth(formula = y ~ x, method = "loess") -->
-<!-- ``` -->
-
-
-
-<!-- ::: footer -->
-<!-- Learn more: [Syntax Highlighting](https://quarto.org/docs/output-formats/html-code.html#highlighting) -->
-<!-- ::: -->
-
-<!-- ## Outline {.smaller} -->
-
-<!-- -   Fundamental limitations of R and Python  -->
-<!-- -   When to know it's a real server issue  -->
-<!-- -   Best practices for improving your apps performance  -->
-
-<!-- ::: notes -->
-<!-- Press the S key (or use the Navigation Menu) to show the presentation speaker view (multiplex). -->
-
-<!-- -   Fundamental limitations of R and Python  -->
-<!-- -   When to know it's a real server issue  -->
-<!-- -   Best practices for improving your apps performance  -->
-<!--   -   Profiling and load testing  -->
-<!--   -   Runtime settings  -->
-<!--   -   Data best practices  -->
-<!--   -   When to consider async -->
-<!-- ::: -->
-
-
-<!-- ## R and Python {.smaller} -->
-
-<!-- ![](https://rstudio.github.io/reticulate/img/reticulated_python.png){width="250"} -->
-
-<!-- R and Python are **free and open-source** software environments for **statistical computing and graphics** as well as other applications. They compile and run on a wide variety of UNIX platforms, Windows and MacOS. -->
-
-<!-- Fundamental limitation of R and Python : Single Threaded  -->
-
-<!-- - Multiple connections share a process  -->
-<!-- - Each process only handles one request at a time  -->
-<!-- - Analogy: Kitchen  -->
-
-<!-- ::: notes -->
-
-
-<!-- ::: -->
-
-<!-- ## When to know it's a real server issue  {.smaller} -->
-
-<!-- Ask the questions:  -->
-
-<!-- -   Are all applications impacted?  -->
-<!-- -   Has performance gotten worse over time?  -->
-
-<!-- Use the tools:  -->
-
-<!-- -   Admin dashboard  -->
-<!-- -   Logs  -->
-<!-- -   Scheduled content timetable  -->
-<!-- -   Any additional monitoring through Prometheus/Graphite/etc.  -->
-<!-- -   Reclaim space by [reducing the number of bundles stored on the server](https://docs.rstudio.com/connect/admin/content-management/#bundle-management) -->
-
-<!-- ::: notes -->
-
-
-<!-- ::: -->
-
-
-<!-- <font size="1"> This is my text number1</font>  -->
-
-<!--  <font size="2"> This is my text number 2 </font> -->
-
-<!--  <font size="3"> This is my text number 3</font>  -->
-
-<!--  <font size="4"> This is my text number 4</font>  -->
-
-<!--  <font size="5"> This is my text number 5</font>  -->
-
-<!--  <font size="6"> This is my text number 6</font> -->
