--- a/test_slow/shinytest2.Rmd
+++ b/test_slow/shinytest2.Rmd
@@ -108,20 +108,31 @@ Start shinytest2 with a longer load timeout to prevent unecessary errors:
 
 ```{r}
 # Start AppDriver with recorder url
-chrome <- shinytest2::AppDriver$new("http://127.0.0.1:8600", load_timeout = 15 * 1000)
+# chrome <- shinytest2::AppDriver$new("http://127.0.0.1:8600", load_timeout = 15 * 1000)
+chrome <- shinytest2::AppDriver$new("http://127.0.0.1:8600", load_timeout = 50 * 1000)
 ```
 
 We can now use shinytest2 to programmatically change the inputs without needing manual interaction - super useful if down the road the goal is to be able to progammatically recreate this load test scenario! 
 
 ```{r}
-app$set_inputs(mu = 4, timeout_ = 15 * 1000)
+chrome$set_inputs(mu = 4, timeout_ = 15 * 1000)
+
+Sys.sleep(1)
+
+chrome$set_inputs(X = .2, timeout_ = 15 * 1000)
+
+Sys.sleep(1)
+
+chrome$set_inputs(Y = 3, timeout_ = 15 * 1000)
+
+Sys.sleep(1)
 ```
 
 
 Check the logs: 
 
 ```{r}
-chrome$get_log()
+chrome$get_logs()
 ```
 
 
@@ -129,13 +140,59 @@ Close the connection when done.
 
 ```{r}
 # clean
-app$stop()
+chrome$stop()
 # needed to avoid
 # java.lang.IllegalStateException: last event in log not a
 # WS_CLOSE (did you close the tab after recording?)
 Sys.sleep(2)
+
+# When you are completely done you will close the app with: 
+# target$kill()
 ```
 
 
+Now that we have the recording we can use shinycannon to simulate scenarios with multiple users connecting to the application: 
 
+```{r}
+target_url <- "http://127.0.0.1:3515"
+workers <- 10
+dir <- "run3"
+system(
+  sprintf(
+    "java -jar shinycannon-1.1.3-dd43f6b.jar recording.log %s --workers %s --loaded-duration-minutes 2 --output-dir %s",
+    target_url, workers, dir
+  )
+)
+```
+
+
+Now that we are done load testing our app we will close it: 
+
+```{r}
+target$kill()
+```
+
+
+## Analyzing the results 
+
+Reference the documentation to understand the different charts: <https://rstudio.github.io/shinyloadtest/articles/analyzing-load-test-logs.html?q=output#report-output> 
+
+```{r}
+library(shinyloadtest)
+library(dplyr)
+
+df <- load_runs(
+  `1 user` = "run1",
+  `5 users` = "run2",
+  `10 users` = "run3"
+)
+
+shinyloadtest_report(df, "report.html")
+
+```
+
+
+## Next level 
+
+Automate the load test with git actions and use as part of a CI/CD pipeline: <https://rstudio.github.io/shinytest2/articles/use-application-audit.html?q=load%20test#automating-with-github-actions>
 
