--- a/test_slow/shinytest2.Rmd
+++ b/test_slow/shinytest2.Rmd
@@ -155,8 +155,8 @@ Now that we have the recording we can use shinycannon to simulate scenarios with
 
 ```{r}
 target_url <- "http://127.0.0.1:3515"
-workers <- 10
-dir <- "run3"
+workers <- 1
+dir <- "run1"
 system(
   sprintf(
     "java -jar shinycannon-1.1.3-dd43f6b.jar recording.log %s --workers %s --loaded-duration-minutes 2 --output-dir %s",
@@ -180,6 +180,7 @@ Reference the documentation to understand the different charts: <https://rstudio
 ```{r}
 library(shinyloadtest)
 library(dplyr)
+library(lubridate)
 
 df <- load_runs(
   `1 user` = "run1",
