--- a/test_slow_on_connect_workbench/shinyloadtest.Rmd
+++ b/test_slow_on_connect_workbench/shinyloadtest.Rmd
@@ -15,10 +15,11 @@ knitr::opts_chunk$set(echo = TRUE)
 
 ## Resources 
 
+ - Profiling your shiny app: <https://shiny.rstudio.com/articles/profiling.html> 
  - Shinyloadtest package documentation: <https://rstudio.github.io/shinyloadtest/>
  - Shinyloadtest git repo: <https://github.com/rstudio/shinyloadtest/> 
  - Connect specific article: <https://rstudio.github.io/shinyloadtest/articles/load-testing-authenticated-apps.html>
- - Installing shinycannon: https://rstudio.github.io/shinyloadtest/articles/shinycannon.html#installation 
+ - Installing shinycannon: <https://rstudio.github.io/shinyloadtest/articles/shinycannon.html#installation>
  - Analyzing the results: <https://rstudio.github.io/shinyloadtest/articles/analyzing-load-test-logs.html> 
 
 ## Secret management 
