--- a/test_slow_on_connect_workbench/shinyloadtest.Rmd
+++ b/test_slow_on_connect_workbench/shinyloadtest.Rmd
@@ -22,7 +22,7 @@ knitr::opts_chunk$set(echo = TRUE)
  - Installing shinycannon: <https://rstudio.github.io/shinyloadtest/articles/shinycannon.html#installation>
  - Analyzing the results: <https://rstudio.github.io/shinyloadtest/articles/analyzing-load-test-logs.html> 
 
-Internal reference: <https://rstudioide.zendesk.com/agent/tickets/86733> 
+Internal reference: <https://rstudioide.zendesk.com/agent/tickets/86733> and <https://positpbc.atlassian.net/wiki/spaces/PRO/pages/285769868/Novartis+Best+Practices+Call>
 
 ## Secret management 
 
