--- a/test_connect_app_upload_file/shinyloadtest.Rmd
+++ b/test_connect_app_upload_file/shinyloadtest.Rmd
@@ -40,17 +40,10 @@ Test a single app that has been deployed to Connect. Use the URL from the "open 
 ```{r}
 library(shinyloadtest)
 
-# For some reason it's failing on main currently, websocket error
-# shinyloadtest::record_session(
-#   target_app_url='https://colorado.posit.co/rsc/content/bec1d4bc-2ab7-4ba3-9bd6-b9e336bf3ff9/', 
-#   connect_api_key=Sys.getenv("CONNECT_API_KEY"))
-
-# Works on staging
+# Record session
 shinyloadtest::record_session(
-    target_app_url='https://colorado.posit.co/rsc/content/e297c186-e1a2-4afe-8abb-3edb52621559',
+    target_app_url='https://colorado.posit.co/rsc/content/5f326263-2074-4c73-bc8c-b13c1e84c249',
   connect_api_key=Sys.getenv("CONNECT_API_KEY"))
-  # target_app_url='https://staging.colorado.posit.co/rsc/content/837525f0-b7f7-4c6d-9cd1-77fdd4a2ebc0',
-  # connect_api_key=Sys.getenv("CONNECT_API_KEY_STAGING"))
 ```
 
 This generates a recording.log file which is the "typical user interacting with the app" which we will use for load testing. 
@@ -107,15 +100,9 @@ The load testing will be run either from terminal or from R using the system or 
 
 Run the load test in terminal: 
 
-Windows (using the URL as a variable): 
+Using the URL as a variable (this doesn't work?): 
 ```bash
 java -jar shinycannon-1.1.3-dd43f6b.jar recording.log %SHINYCANNON_CONNECT_URL% --workers 1 --loaded-duration-minutes 2 --output-dir run1 --overwrite-output
-```
-
-Windows (providing the URL directly): 
-
-```bash
-java -jar shinycannon-1.1.3-dd43f6b.jar recording.log https://staging.colorado.posit.co/rsc/content/837525f0-b7f7-4c6d-9cd1-77fdd4a2ebc0 --workers 1 --loaded-duration-minutes 2 --output-dir run1 --overwrite-output
 ```
 
 Change the output directory and number of workers and run it again: 
@@ -128,22 +115,45 @@ java -jar shinycannon-1.1.3-dd43f6b.jar recording.log %SHINYCANNON_CONNECT_URL% 
 java -jar shinycannon-1.1.3-dd43f6b.jar recording.log %SHINYCANNON_CONNECT_URL% --workers 7 --loaded-duration-minutes 2 --output-dir run7 --overwrite-output
 ```
 
-Alternatively we could pass in the command from R using the `system()` command: 
+Providing the URL directly: 
+
+```bash
+java -jar shinycannon-1.1.3-dd43f6b.jar recording.log https://colorado.posit.co/rsc/content/5f326263-2074-4c73-bc8c-b13c1e84c249 --workers 1 --loaded-duration-minutes 2 --output-dir run1 --overwrite-output
+```
+
+Change the output directory and number of workers and run it again: 
+
+```bash
+java -jar shinycannon-1.1.3-dd43f6b.jar recording.log https://colorado.posit.co/rsc/content/5f326263-2074-4c73-bc8c-b13c1e84c249 --workers 3 --loaded-duration-minutes 2 --output-dir run2 --overwrite-output
+```
+
+```bash
+java -jar shinycannon-1.1.3-dd43f6b.jar recording.log https://colorado.posit.co/rsc/content/5f326263-2074-4c73-bc8c-b13c1e84c249 --workers 7 --loaded-duration-minutes 2 --output-dir run3 --overwrite-output
+```
+
+WE can view the availabel shinycannon functions with: 
+
+```bash
+java -jar shinycannon-1.1.3-dd43f6b.jar -h
+```
+
+Alternatively we could pass in the command from R using the `system()` command (not working): 
+Refer to: <https://rstudio.github.io/shinyloadtest/articles/load-testing-authenticated-apps.html#load-testing> 
 
 ```{r}
-connect_api_key = Sys.getenv("CONNECT_API_KEY")
+CONNECT_API_KEY <- Sys.getenv("CONNECT_API_KEY")
 
+# "set SHINYCANNON_CONNECT_API_KEY=", #Change this if you are running on Windows
 system(
-  sprintf(
-    # "set SHINYCANNON_CONNECT_API_KEY=", #Change this if you are running on Windows
-     "export SHINYCANNON_CONNECT_API_KEY=",
-    connect_api_key
+  paste0(
+     "export SHINYCANNON_CONNECT_API_KEY=",Sys.getenv("CONNECT_API_KEY")
     )
 )
 
-target_url <- "https://staging.colorado.posit.co/rsc/content/837525f0-b7f7-4c6d-9cd1-77fdd4a2ebc0"
+target_url <- "https://colorado.posit.co/rsc/content/5f326263-2074-4c73-bc8c-b13c1e84c249"
 workers <- 1
 dir <- "run1"
+
 system(
   sprintf(
     "java -jar shinycannon-1.1.3-dd43f6b.jar recording.log %s --workers %s --loaded-duration-minutes 2 --output-dir %s --overwrite-output",
@@ -168,8 +178,8 @@ library(dplyr)
 
 df <- load_runs(
   `1 user` = "run1",
-  `3 users` = "run3"#,
-  #`7 users` = "run7"
+  `3 users` = "run2"#,
+  #`7 users` = "run3"
 )
 
 shinyloadtest_report(df, "report.html")
